2021-05-03         [RELEASE] Release of social_gdpr 3.1.0 (Nicole Cordes)
2021-05-03 00b0dc5 [TASK] Update supporting files to EXT:my_skeleton 0.4.3 (Nicole Cordes)
2021-04-30 55910e9 [BUGFIX] Adjust YouTube possiblePreviewNames (Nicole Cordes)
2021-02-10 0064120 [TASK] added rel="noreferrer" to external Links (SvenJuergens)
2021-02-03 3d189c0 Slightly reformat templates and language files (Nicole Cordes)
2021-01-27 0e84977 [TASK] improve accessiblity change (Franz Kugelmann)
2021-01-21 7dd07c5 [FEATURE] make 2-click elements more accessible (Franz Kugelmann)
2021-01-11 66ba6bd [TASK] Update supporting files to EXT:my_skeleton 0.4.2 (Nicole Cordes)
2020-10-25 d97fb47 [TASK] Update supporting files to EXT:my_skeleton 0.4.1 (Nicole Cordes)

2020-10-13         [RELEASE] Release of social_gdpr 3.0.2 (Nicole Cordes)
2020-10-07 ae3f3b0 [BUGFIX] Use flexible scaling for OpenStreetMap maps (Nicole Cordes)
2020-10-07 ec7aa93 [BUGFIX] Add default background to maps (Nicole Cordes)

2020-10-01         [RELEASE] Release of social_gdpr 3.0.1 (Nicole Cordes)
2020-10-01 d02a7ba [BUGFIX] Use proper scaling for OpenStreetMap maps (Nicole Cordes)

2020-09-24         [RELEASE] Release of social_gdpr 3.0.0 (Nicole Cordes)
2020-09-24 9885fd8 !!![FEATURE] Add extension configuration for preview images (Nicole Cordes)
2020-09-24 ea7fdb7 [FEATURE] Add OpenStreetMap handler (Nicole Cordes)
2020-09-23 aef01f7 [TASK] Raise extension version to 3.x (Nicole Cordes)

2020-09-23         [RELEASE] Release of social_gdpr 2.0.2 (Nicole Cordes)
2020-09-17 f213798 [BUGFIX] Use correct CSS class for map icon (Nicole Cordes)
2020-09-17 423f5d8 [BUGFIX] Improve iframe height and width detection (Nicole Cordes)

2020-09-03         [RELEASE] Release of social_gdpr 2.0.1 (Nicole Cordes)
2020-09-01 cd6f442 [TASK] Use same size constraints as defined in CSS (Nicole Cordes)
2020-08-31 0c7be44 [FEATURE] add width and height to icon images to improve CLS score (Franz Kugelmann)
